--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 	<link rel="apple-touch-icon" sizes="144x144" href="assets/img/common/favicon/apple-touch-icon-144x144.png">
 	<link rel="apple-touch-icon" sizes="152x152" href="assets/img/common/favicon/apple-touch-icon-152x152.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/common/favicon/apple-touch-icon-180x180.png"> -->
-	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="assets/img/common/favicon/circle_logo_shayar.png" sizes="32x32">
 	<!-- <link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="192x192">
 	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="96x96">
 	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="16x16"> -->
 	<link rel="manifest" href="assets/img/common/favicon/manifest.json">
-	<link rel="shortcut icon" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png">
+	<link rel="shortcut icon" href="assets/img/common/favicon/circle_logo_shayar.png">
 	<!--my file link start-->
 	<!-- <link rel="stylesheet" href="my/lightbox.min.css" /> -->
 	<link rel="stylesheet" href="mystylefile/lightbox.min.css" />
@@ -170,7 +170,7 @@
 					<a href="#contacts" class="mobile-menu__link js-scroll-to">Contacts Us</a>
 				</li>
 				<li class="mobile-menu__item mobile-menu__item--button">
-					<a href="#" class="mobile-menu__link js-scroll-to">Download App</a>
+					<a href="#appDownload" class="mobile-menu__link js-scroll-to">Download App</a>
 				</li>
 			</ul>
 		</div>
@@ -265,7 +265,7 @@
 									<a href="#contacts" class="menu__link js-scroll-to">Contacts Us</a>
 								</li>
 								<li class="menu__item menu__item--button">
-									<a href="#" class="menu__link js-scroll-to">Download App</a>
+									<a href="#appDownload" class="menu__link js-scroll-to">Download App</a>
 								</li>
 							</ul>
 						</nav>
@@ -383,7 +383,7 @@
 						<a class="download-button  "
 							href="https://play.google.com/store/apps/details?id=com.shayarindia.shayar" target="_blank">
 							<img src="assets/img/common/logo/PLAYSTORE.png" class="download-button__icon"
-								alt="Platform Icon">
+								alt="Platform Icon" id="appDownload">
 							<span class="download-button__platform"
 								style="padding-top:12px;text-align:center;">Playstore</span>
 							<!-- <span class="download-button__store">App Store</span> -->
@@ -615,8 +615,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-24">
-					<a href="https://www.youtube.com/channel/O4hZeQFuFgw"
-						class="section__button section__button--youtube">Our channel</a>
+					<a href="https://www.youtube.com/channel/UCYy1ppjK6YJC9FRY5N8D6IA"
+						class="section__button section__button--youtube" target="_blank">Our channel</a>
 				</div>
 			</div>
 		</div>
@@ -630,20 +630,20 @@
 						</h2>
 						<!-- End of Section Title -->
 						<!-- Section Subtitle -->
-						<p class="section-subtitle section-subtitle--center "> Lorem ipsum dolor sit amet, eos fierent
-							pertinacia eu est elit tincidunt sadipscing te </p>
+						<!-- <p class="section-subtitle section-subtitle--center "> Lorem ipsum dolor sit amet, eos fierent
+							pertinacia eu est elit tincidunt sadipscing te </p> -->
 						<!-- End of Section Subtitle -->
 					</div>
 				</div>
 			</div>
 			<!-- Video -->
 			<div class="video  ">
-				<a href="https://www.youtube.com/watch?v=rhTHF2YFJPU" class="video__holder js-video">
-					<img src="assets/img/common/backgrounds/n1.jpg" class="video__primary"
+				<a href="https://www.youtube.com/channel/UCYy1ppjK6YJC9FRY5N8D6IA" class="video__holder js-video" target="_blank">
+					<img src="assets/img/common/backgrounds/bg.jpg" class="video__primary"
 						alt="Primary Video Thumbnail">
-					<img src="assets/img/common/backgrounds/n1.jpg" class="video__secondary video__secondary--left"
+					<img src="assets/img/common/backgrounds/bg2.jpg" class="video__secondary video__secondary--left"
 						alt="Secondary Video Thumbnail">
-					<img src="assets/img/common/backgrounds/n1.jpg" class="video__secondary video__secondary--right"
+					<img src="assets/img/common/backgrounds/clock5.jpg" class="video__secondary video__secondary--right"
 						alt="Secondary Video Thumbnail">
 					<span class="video__button"></span>
 				</a>
