--- a/legal/privacypolicy (1).html
+++ b/legal/privacypolicy (1).html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy policy</title>
     <link rel="stylesheet" href="css.css">
-	<!-- <link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="32x32"> -->
+	<link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="32x32">
+    <link rel="manifest" href="img/manifest.json">
+	<link rel="shortcut icon" href="img/circle_logo_shayar.png">
 
     <!-- <style>
         *{
