--- a/legal/terms (1).html
+++ b/legal/terms (1).html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css.css">
+  <link rel="icon" type="image/png" href="assets/img/common/favicon/Shayar_logo_512_whitebg.png" sizes="32x32">
+    <link rel="manifest" href="img/manifest.json">
+	<link rel="shortcut icon" href="img/circle_logo_shayar.png">
   <title>Terms and Conditions</title>
   <style>
     /* *{
