--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@
 						<span class='slider__highlight'>know your current mood</span> and scroll relatable shayari’s
 					</h2>
 					<div class="slider__content">
-						<img src="assets/img/common/slider/LOGIN PAGE (1).png" class="slider__secondary" alt="Slider Image">
+						<img src="assets/img/common/slider/LOGIN PAGE (1).png" class="slider__secondary"
+							alt="Slider Image">
 						<img src="assets/img/common/slider/SPLASH SCREEN (1).png"
 							class="slider__secondary slider__secondary--right" alt="Slider Image">
 						<img src="assets/img/common/slider/MOOD PAGE (1).png" class="slider__image" alt="Slider Image">
@@ -312,7 +313,8 @@
 						<span class='slider__highlight'>Shayari’s in Video</span>, Image and Text format
 					</h2>
 					<div class="slider__content">
-						<img src="assets/img/common/slider/HOME IMAGE (1).png" class="slider__secondary" alt="Slider Image">
+						<img src="assets/img/common/slider/HOME IMAGE (1).png" class="slider__secondary"
+							alt="Slider Image">
 						<img src="assets/img/common/slider/HOME VIDEO (1).png"
 							class="slider__secondary slider__secondary--right" alt="Slider Image">
 						<img src="assets/img/common/slider/HOME TEXT (1).png" class="slider__image" alt="Slider Image">
@@ -396,7 +398,7 @@
 		</section>
 		<!-- End of Section -->
 		<!-- Section -->
-		<section class="section section--skin-1 " >
+		<section class="section section--skin-1 ">
 			<div class="container">
 				<div class="row" id='plateform'>
 					<div class="col-lg-12 col-md-12">
@@ -404,10 +406,11 @@
 						<div class="push push--60  "> </div>
 						<!-- End of Push -->
 						<!-- Section Title -->
-						<h2 class="section-title" > Biggest Platform For Shayari Creators & Writers </h2>
+						<h2 class="section-title"> Biggest Platform For Shayari Creators & Writers </h2>
 						<!-- End of Section Title -->
 						<!-- Section Subtitle -->
-						<p class="section-subtitle" style="color:#23034C; font-size: 12px;text-transform:capitalize;">Our mission is to onboard all Poetry
+						<p class="section-subtitle" style="color:#23034C; font-size: 12px;text-transform:capitalize;">
+							Our mission is to onboard all Poetry
 							Lovers and empower them to build their
 							own audience
 						</p>
@@ -430,22 +433,27 @@
 						<ul class="list list--boxes  ">
 							<li class="list__item">
 								<!-- Box -->
-								<div class="box  ">
-									<img src="assets/img/common/logo/PLAYSTORE.png" class="box__icon" alt="Box icon">
+								<div class="box">
+									<a href="https://play.google.com/store/apps/details?id=com.shayarindia.shayar"><img
+											src="assets/img/common/logo/PLAYSTORE.png" class="box__icon"
+											alt="Box icon"></a>
 								</div>
 								<!-- End of Box -->
 							</li>
 							<li class="list__item">
 								<!-- Box -->
 								<div class="box  ">
-									<img src="assets/img/common/map/WHATSAPP.png" class="box__icon" alt="Box icon">
+									<a href="https://chat.whatsapp.com/LbDIKv5k8IY2xPx5Zh1UzG"><img
+											src="assets/img/common/map/WHATSAPP.png" class="box__icon"
+											alt="Box icon"></a>
 								</div>
 								<!-- End of Box -->
 							</li>
 							<li class="list__item">
 								<!-- Box -->
 								<div class="box  ">
-									<img src="assets/img/common/map/INSTA.png" class="box__icon" alt="Box icon">
+									<a href="https://instagram.com/shayar_the_community?utm_medium=copy_link"><img
+											src="assets/img/common/map/INSTA.png" class="box__icon" alt="Box icon"></a>
 								</div>
 								<!-- End of Box -->
 							</li>
@@ -638,7 +646,8 @@
 			</div>
 			<!-- Video -->
 			<div class="video  ">
-				<a href="https://www.youtube.com/channel/UCYy1ppjK6YJC9FRY5N8D6IA" class="video__holder js-video" target="_blank">
+				<a href="https://www.youtube.com/channel/UCYy1ppjK6YJC9FRY5N8D6IA" class="video__holder js-video"
+					target="_blank">
 					<img src="assets/img/common/backgrounds/bg.jpg" class="video__primary"
 						alt="Primary Video Thumbnail">
 					<img src="assets/img/common/backgrounds/bg2.jpg" class="video__secondary video__secondary--left"
@@ -1130,7 +1139,8 @@
 								<p>I love this app, they are providing me content in video as a well as text and photo
 									format.</p>
 								<h4 style="position:absolute; top: 100%;left: 30%; color:#ffff ;">Sonali Das</h4>
-								<h4 style="position:absolute; top: 130%;left: 30%; color:#ffff ;">Deputy General Manager</h4>
+								<h4 style="position:absolute; top: 130%;left: 30%; color:#ffff ;">Deputy General Manager
+								</h4>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1146,8 +1156,8 @@
 							<div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
 								<p>With Shayar. I don't have to spend on browser.App has an algo that shows shayari acc
 									to my mood.</p>
-								<h4  style="position:absolute; top: 100%;left: 30%; color:#ffff ;">Utkarsh Mishra</h4>
-								<h4  style="position:absolute; top: 130%;left: 30%; color:#ffff ;">MBBS</h4>
+								<h4 style="position:absolute; top: 100%;left: 30%; color:#ffff ;">Utkarsh Mishra</h4>
+								<h4 style="position:absolute; top: 130%;left: 30%; color:#ffff ;">MBBS</h4>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1164,7 +1174,8 @@
 								<p>This is teh best app. i tried this app and loved it. This app is made in India so
 									urge you to SHAYAR</p>
 								<h4 style="position:absolute; top: 100%;left: 30%; color:#ffff ;">Harshita Dwivedi</h4>
-								<h4 style="position:absolute; top: 130%;left: 30%; color:#ffff ;">Front end designer</h4>
+								<h4 style="position:absolute; top: 130%;left: 30%; color:#ffff ;">Front end designer
+								</h4>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -2231,13 +2242,16 @@
 								</li>
 								<hr style="width: 55px; position: absolute; left: 8px;color: #ffff;"><br><br>
 								<li class="link-list__item">
-									<a href="legal/privacypolicy (1).html" class="link-list__link" target="_blank">Privacy Policy</a>
+									<a href="legal/privacypolicy (1).html" class="link-list__link"
+										target="_blank">Privacy Policy</a>
 								</li>
 								<li class="link-list__item">
-									<a href="legal/terms (1).html" class="link-list__link" target="_blank">Terms and Conditions</a>
+									<a href="legal/terms (1).html" class="link-list__link" target="_blank">Terms and
+										Conditions</a>
 								</li>
 								<li class="link-list__item">
-									<a href="legal/guidelines (1).html" class="link-list__link" target="_blank">Community Guidelines</a>
+									<a href="legal/guidelines (1).html" class="link-list__link"
+										target="_blank">Community Guidelines</a>
 								</li>
 							</ul>
 						</nav>
@@ -2363,16 +2377,16 @@
 	<!--myfile second ends-->
 	<script>
 		if (navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(showPosition);
-  } else {
-    alert("Geolocation is not supported by this browser.");
-  }
+			navigator.geolocation.getCurrentPosition(showPosition);
+		} else {
+			alert("Geolocation is not supported by this browser.");
+		}
 
 
-  function showPosition(position) {
-    alert("Latitude: " + position.coords.latitude +
-      "   Longitude: " + position.coords.longitude);
-  }
+		function showPosition(position) {
+			alert("Latitude: " + position.coords.latitude +
+				"   Longitude: " + position.coords.longitude);
+		}
 	</script>
 
 	<!-- <script>
