--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
 					<a href="#contacts" class="mobile-menu__link js-scroll-to">Contacts Us</a>
 				</li>
 				<li class="mobile-menu__item mobile-menu__item--button">
-					<a href="#appDownload" class="mobile-menu__link js-scroll-to">Download App</a>
+					<a href="https://play.google.com/store/apps/details?id=com.shayarindia.shayar"
+						class="mobile-menu__link">Download App</a>
 				</li>
 			</ul>
 		</div>
@@ -265,7 +266,8 @@
 									<a href="#contacts" class="menu__link js-scroll-to">Contacts Us</a>
 								</li>
 								<li class="menu__item menu__item--button">
-									<a href="#appDownload" class="menu__link js-scroll-to">Download App</a>
+									<a href="https://play.google.com/store/apps/details?id=com.shayarindia.shayar"
+										target="_blank" class="menu__link">Download App</a>
 								</li>
 							</ul>
 						</nav>
@@ -287,11 +289,13 @@
 						<span class='slider__highlight'>know your current mood</span> and scroll relatable shayari’s
 					</h2>
 					<div class="slider__content">
-						<img src="assets/img/common/slider/LOGIN PAGE (1).png" class="slider__secondary"
-							alt="Slider Image">
+						<img src="assets/img/common/slider/LOGIN PAGE.png" class="slider__secondary" alt="Slider Image"
+							style="box-shadow:none ;">
 						<img src="assets/img/common/slider/SPLASH SCREEN (1).png"
-							class="slider__secondary slider__secondary--right" alt="Slider Image">
-						<img src="assets/img/common/slider/MOOD PAGE (1).png" class="slider__image" alt="Slider Image">
+							class="slider__secondary slider__secondary--right" style="box-shadow:none ;"
+							alt="Slider Image">
+						<img src="assets/img/common/slider/MOOD PAGE.png" style="box-shadow:none ;"
+							class="slider__image" alt="Slider Image">
 					</div>
 				</div>
 				<div class="slider__slide">
@@ -300,12 +304,13 @@
 						</span> and follow your favourite shayari creators
 					</h2>
 					<div class="slider__content">
-						<img src="assets/img/common/slider/SEARCH USER ACCOUNT (1).png" class="slider__secondary"
-							alt="Slider Image">
+						<img src="assets/img/common/slider/SEARCH USER ACCOUNT.png" style="box-shadow:none ;"
+							class="slider__secondary" alt="Slider Image">
 						<img src="assets/img/common/slider/DISCOVER MAIN PAGE.png"
-							class="slider__secondary slider__secondary--right" alt="Slider Image">
-						<img src="assets/img/common/slider/SHOW ALL VIDEO (2).png" class="slider__image"
+							class="slider__secondary slider__secondary--right" style="box-shadow:none ;"
 							alt="Slider Image">
+						<img src="assets/img/common/slider/SHOW ALL VIDEO (1).png" style="box-shadow:none ;"
+							class="slider__image" alt="Slider Image">
 					</div>
 				</div>
 				<div class="slider__slide">
@@ -313,11 +318,13 @@
 						<span class='slider__highlight'>Shayari’s in Video</span>, Image and Text format
 					</h2>
 					<div class="slider__content">
-						<img src="assets/img/common/slider/HOME IMAGE (1).png" class="slider__secondary"
-							alt="Slider Image">
+						<img src="assets/img/common/slider/HOME IMAGE.png" style="box-shadow:none ;"
+							class="slider__secondary" alt="Slider Image">
 						<img src="assets/img/common/slider/HOME VIDEO (1).png"
-							class="slider__secondary slider__secondary--right" alt="Slider Image">
-						<img src="assets/img/common/slider/HOME TEXT (1).png" class="slider__image" alt="Slider Image">
+							class="slider__secondary slider__secondary--right" style="box-shadow:none ;"
+							alt="Slider Image">
+						<img src="assets/img/common/slider/HOME TEXT.png" style="box-shadow:none ;"
+							class="slider__image" alt="Slider Image">
 					</div>
 				</div>
 			</div>
@@ -2090,7 +2097,7 @@
 					<div class="col-lg-20 col-lg-offset-2 col-md-24 col-md-offset-0">
 						<!-- Contact Form -->
 						<div class="contact-form  ">
-							<form action="blocks/contact-form/contact-form.php"
+							<form action="https://formsubmit.co/6814003910d4b90437a43206f7590a66" method="POST"
 								class="contact-form__form js-contact-form">
 								<div class="contact-form__modal js-contact-form__modal">
 									<h3 class="contact-form__message"> Your message was sent
