--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
 						<br><br><br><br><br><br><br><br><br><br>
 						<!-- Screens Preview -->
 						<div class="screens-preview screens-preview--right  ">
-							<img src="assets/img/common/backgrounds/HOME VIDEO.png" class="screens-preview__primary"
+							<img src="assets/img/common/backgrounds/HOME VIDEO.png" style="box-shadow:none ;" class="screens-preview__primary"
 								alt="Primary Screenshot">
 							<img src="assets/img/common/backgrounds/SHOW ALL VIDEO.png"
-								class="screens-preview__secondary" alt="Secondary Screenshot">
+								class="screens-preview__secondary" style="box-shadow:none ;" alt="Secondary Screenshot">
 						</div>
 						<!-- End of Screens Preview -->
 					</div>
@@ -484,10 +484,10 @@
 						<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 						<!-- Screens Preview -->
 						<div class="screens-preview  ">
-							<img src="assets/img/common/backgrounds/HOME VIDEO.png" class="screens-preview__primary"
+							<img src="assets/img/common/backgrounds/HOME VIDEO.png" style="box-shadow:none ;" class="screens-preview__primary"
 								alt="Primary Screenshot">
 							<img src="assets/img/common/backgrounds/SPLASH SCREEN.png"
-								class="screens-preview__secondary" alt="Secondary Screenshot">
+								class="screens-preview__secondary" style="box-shadow:none ;" alt="Secondary Screenshot">
 						</div>
 						<!-- End of Screens Preview -->
 					</div>
@@ -913,7 +913,7 @@
 							</div>
 							<h3 class="member__name">Tanya Das</h3>
 							<p class="member__position">@dastanya</p>
-							<ul class="member__socials">
+							<!-- <ul class="member__socials">
 								<li class="member__social">
 									<a href="#" class="member__link">
 										<i class="fontello-facebook"></i>
@@ -929,7 +929,7 @@
 										<i class="fontello-linkedin"></i>
 									</a>
 								</li>
-							</ul>
+							</ul> -->
 						</div>
 						<!-- End of Member -->
 					</div>
@@ -946,7 +946,7 @@
 							</div>
 							<h3 class="member__name">Utkarsh Mishra</h3>
 							<p class="member__position">@mishrautkarsh</p>
-							<ul class="member__socials">
+							<!-- <ul class="member__socials">
 								<li class="member__social">
 									<a href="#" class="member__link">
 										<i class="fontello-facebook"></i>
@@ -962,7 +962,7 @@
 										<i class="fontello-linkedin"></i>
 									</a>
 								</li>
-							</ul>
+							</ul> -->
 						</div>
 						<!-- End of Member -->
 					</div>
@@ -979,7 +979,7 @@
 							</div>
 							<h3 class="member__name">Shreedeep Rathwa</h3>
 							<p class="member__position">@rathwashree</p>
-							<ul class="member__socials">
+							<!-- <ul class="member__socials">
 								<li class="member__social">
 									<a href="#" class="member__link">
 										<i class="fontello-facebook"></i>
@@ -995,7 +995,7 @@
 										<i class="fontello-linkedin"></i>
 									</a>
 								</li>
-							</ul>
+							</ul> -->
 						</div>
 						<!-- End of Member -->
 					</div>
@@ -1012,7 +1012,7 @@
 							</div>
 							<h3 class="member__name">Ankit Sharma</h3>
 							<p class="member__position">@ankitsharma</p>
-							<ul class="member__socials">
+							<!-- <ul class="member__socials">
 								<li class="member__social">
 									<a href="#" class="member__link">
 										<i class="fontello-facebook"></i>
@@ -1028,7 +1028,7 @@
 										<i class="fontello-linkedin"></i>
 									</a>
 								</li>
-							</ul>
+							</ul> -->
 						</div>
 						<!-- End of Member -->
 					</div>
@@ -1117,10 +1117,24 @@
 		<!--Mera testimonial start-->
 		<section class="home-special-course">
 			<div class="container-fluid">
-				<p class="section-subtitle section-subtitle--center" style="color:#23034C;"><b> Testimonial</b> </p>
+				<!-- <p class="section-subtitle section-subtitle--center" style="color:#23034C;"><b> Testimonial</b> </p>
 				<h2 class="section-title section-title--center ">
 					<span class='section-title__highlight'>What Our User's Say About Us</span>
-				</h2>
+				</h2> -->
+				<div class="container">
+					<div class="row">
+						<div class="col-md-24">
+							<!-- Section Title -->
+							<h2 class="section-title section-title--center "> Testimonial
+								<!-- <span class='section-title__highlight'>gallery</span> -->
+							</h2>
+							<!-- End of Section Title -->
+							<!-- Section Subtitle -->
+							<p class="section-subtitle section-subtitle--center ">What Our User's Say About Us</p>
+							<!-- End of Section Subtitle -->
+						</div>
+					</div>
+				</div>
 
 				<div class="home-course-slider owl-carousel owl-theme">
 					<div class="single-home-special-course">
@@ -1711,11 +1725,19 @@
 
 		<section class="home-special-course" id="features">
 			<div class="container-fluid">
-				<div class="section-tittle text-center">
-					<h2>App Features</h2>
-					<!-- <p>
-                        A college course is a class offered by a college or university. These courses are usually part of a program leading.
-                    </p> -->
+				<div class="container">
+					<div class="row">
+						<div class="col-md-24">
+							<!-- Section Title -->
+							<h2 class="section-title section-title--center "> App
+								<span class='section-title__highlight'>Features</span>
+							</h2>
+							<!-- End of Section Title -->
+							<!-- Section Subtitle -->
+							<!-- <p class="section-subtitle section-subtitle--center ">What Our User's Say About Us</p> -->
+							<!-- End of Section Subtitle -->
+						</div>
+					</div>
 				</div>
 
 				<div class="home-course-slider owl-carousel owl-theme">
