--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@
 					<div class="slider__content">
 						<img src="assets/img/common/slider/LOGIN PAGE.png" class="slider__secondary" alt="Slider Image"
 							style="box-shadow:none ;">
-						<img src="assets/img/common/slider/SPLASH SCREEN (1).png"
+						<img src="assets/img/common/slider/MOOD PAGE.png"
 							class="slider__secondary slider__secondary--right" style="box-shadow:none ;"
 							alt="Slider Image">
-						<img src="assets/img/common/slider/MOOD PAGE.png" style="box-shadow:none ;"
+						<img src="assets/img/common/slider/SPLASH SCREEN (1).png" style="box-shadow:none ;"
 							class="slider__image" alt="Slider Image">
 					</div>
 				</div>
@@ -306,10 +306,10 @@
 					<div class="slider__content">
 						<img src="assets/img/common/slider/SEARCH USER ACCOUNT.png" style="box-shadow:none ;"
 							class="slider__secondary" alt="Slider Image">
-						<img src="assets/img/common/slider/DISCOVER MAIN PAGE.png"
+						<img src="assets/img/common/slider/SHOW ALL VIDEO (1).png"
 							class="slider__secondary slider__secondary--right" style="box-shadow:none ;"
 							alt="Slider Image">
-						<img src="assets/img/common/slider/SHOW ALL VIDEO (1).png" style="box-shadow:none ;"
+						<img src="assets/img/common/slider/DISCOVER MAIN PAGE.png" style="box-shadow:none ;"
 							class="slider__image" alt="Slider Image">
 					</div>
 				</div>
@@ -320,10 +320,10 @@
 					<div class="slider__content">
 						<img src="assets/img/common/slider/HOME IMAGE.png" style="box-shadow:none ;"
 							class="slider__secondary" alt="Slider Image">
-						<img src="assets/img/common/slider/HOME VIDEO (1).png"
+						<img src="assets/img/common/slider/HOME TEXT.png"
 							class="slider__secondary slider__secondary--right" style="box-shadow:none ;"
 							alt="Slider Image">
-						<img src="assets/img/common/slider/HOME TEXT.png" style="box-shadow:none ;"
+						<img src="assets/img/common/slider/HOME VIDEO (1).png" style="box-shadow:none ;"
 							class="slider__image" alt="Slider Image">
 					</div>
 				</div>
@@ -332,7 +332,7 @@
 		</div>
 		<!-- End of Hero -->
 		<!-- Section -->
-		<section class="section section--grey " id='shayar'>
+		<section class="section" id='shayar'>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-24">
@@ -344,7 +344,7 @@
 						<!-- End of Section Title -->
 						<!-- Section Subtitle -->
 						<p class="section-subtitle section-subtitle--center"
-							style="color:#23034C; font-size: 12px;text-transform:capitalize;"> Be A Part Of Shayar
+							style="color:#23034C; font-size: 22px; text-transform:capitalize;"> Be A Part Of Shayar
 							Community
 
 						</p>
