--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 		</div>
 		<!-- End of Hero -->
 		<!-- Section -->
-		<section class="section" id='shayar'>
+		<section class="section" id='shayar' style="padding-top:40px">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-24">
@@ -471,8 +471,8 @@
 						<br><br><br><br><br><br><br><br><br><br>
 						<!-- Screens Preview -->
 						<div class="screens-preview screens-preview--right  ">
-							<img src="assets/img/common/backgrounds/HOME VIDEO.png" style="box-shadow:none ;" class="screens-preview__primary"
-								alt="Primary Screenshot">
+							<img src="assets/img/common/backgrounds/HOME VIDEO.png" style="box-shadow:none ;"
+								class="screens-preview__primary" alt="Primary Screenshot">
 							<img src="assets/img/common/backgrounds/SHOW ALL VIDEO.png"
 								class="screens-preview__secondary" style="box-shadow:none ;" alt="Secondary Screenshot">
 						</div>
@@ -484,8 +484,8 @@
 						<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 						<!-- Screens Preview -->
 						<div class="screens-preview  ">
-							<img src="assets/img/common/backgrounds/HOME VIDEO.png" style="box-shadow:none ;" class="screens-preview__primary"
-								alt="Primary Screenshot">
+							<img src="assets/img/common/backgrounds/HOME VIDEO.png" style="box-shadow:none ;"
+								class="screens-preview__primary" alt="Primary Screenshot">
 							<img src="assets/img/common/backgrounds/SPLASH SCREEN.png"
 								class="screens-preview__secondary" style="box-shadow:none ;" alt="Secondary Screenshot">
 						</div>
@@ -506,7 +506,7 @@
 						<ul class="accordion js-accordion ">
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/logo/get-certiifed-icon.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/png_icons/MAKE VIDEO.png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I make a video ?
 								</h3>
@@ -520,7 +520,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/logo/medical-icon.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/png_icons/DELETE VIDEO.png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I delete my video?
 								</h3>
@@ -533,7 +533,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/logo/searchforyourcourse.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/png_icons/OPTIONS FOR LOGIN.png" class="accordion__icon"
 										alt="Accordion Icon">
 									What are the login options available for me?
 								</h3>
@@ -545,7 +545,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/logo/searchforyourcourse.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/png_icons/DELETE ACCOUNT.png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I delete my Shayar account?
 								</h3>
@@ -557,7 +557,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/logo/searchforyourcourse.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/png_icons/SHARE .png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I share a Video/Photo Shayari?
 								</h3>
@@ -569,7 +569,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/logo/searchforyourcourse.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/png_icons/OFFENSIVE CONTENT.png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I report offensive or questionable content?
 								</h3>
@@ -582,7 +582,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/logo/searchforyourcourse.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/png_icons/CHANGE MY USERNAME.png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I change my username?
 								</h3>
@@ -594,7 +594,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/logo/searchforyourcourse.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/png_icons/EDIT PROFILE.png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I edit profile information?
 								</h3>
@@ -607,7 +607,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/logo/searchforyourcourse.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/png_icons/LIKE AND COMMENT.png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I like and comment on a video?
 
@@ -635,7 +635,7 @@
 				</div>
 			</div>
 		</div>
-		<section class="section section--grey " id='video'>
+		<section class="section" id='video'>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-24">
@@ -652,9 +652,12 @@
 				</div>
 			</div>
 			<!-- Video -->
-			<div class="video  ">
-				<a href="https://www.youtube.com/channel/UCYy1ppjK6YJC9FRY5N8D6IA" class="video__holder js-video"
-					target="_blank">
+			<div class="video">
+				<a href="https://www.youtube.com/channel/UCYy1ppjK6YJC9FRY5N8D6IA" class="video__holder js-video" target="_blank">
+					<!-- <iframe width="1920px" height="1080px" src="https://www.youtube.com/embed/pDgkmP1e8Uo"
+						title="YouTube video player" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen class="video__holder js-video video__primary"></iframe> -->
 					<img src="assets/img/common/backgrounds/bg.jpg" class="video__primary"
 						alt="Primary Video Thumbnail">
 					<img src="assets/img/common/backgrounds/bg2.jpg" class="video__secondary video__secondary--left"
@@ -904,15 +907,15 @@
 						<!-- Member -->
 						<div class="member  ">
 							<div class="member__photo-wrapper">
-								<img src="assets/img/common/person/p5.jpg" class="member__photo" alt="Member Photo">
+								<img src="assets/img/common/person/WOMAN 1.png" class="member__photo" alt="Member Photo">
 								<div class="member__cover">
 									<blockquote class="member__quote">कहने में तो मेरा दिल “एक” है… लेकिन जिसको दिल दिया
 										है “वह हजारों में एक है”…!
 									</blockquote>
 								</div>
 							</div>
-							<h3 class="member__name">Tanya Das</h3>
-							<p class="member__position">@dastanya</p>
+							<h3 class="member__name">Komal Sha</h3>
+							<p class="member__position">@shakomu</p>
 							<!-- <ul class="member__socials">
 								<li class="member__social">
 									<a href="#" class="member__link">
@@ -937,7 +940,7 @@
 						<!-- Member -->
 						<div class="member  ">
 							<div class="member__photo-wrapper">
-								<img src="assets/img/common/person/p5.jpg" class="member__photo" alt="Member Photo">
+								<img src="assets/img/common/person/MAN 1.png" class="member__photo" alt="Member Photo">
 								<div class="member__cover">
 									<blockquote class="member__quote">Khuda tere sare gamo ko teri khushi kar de...Har
 										subah teri duniya me roshni bhar de..Jab bhi tootne lage teri saanse,Khuda
@@ -970,7 +973,7 @@
 						<!-- Member -->
 						<div class="member  ">
 							<div class="member__photo-wrapper">
-								<img src="assets/img/common/person/p5.jpg" class="member__photo" alt="Member Photo">
+								<img src="assets/img/common/person/MAN 2.png" class="member__photo" alt="Member Photo">
 								<div class="member__cover">
 									<blockquote class="member__quote">हमे रंग उसी का चढ़ा है अब तक, जिसने रंग नहीं लगाया
 										अभी तक।💞
@@ -1003,7 +1006,7 @@
 						<!-- Member -->
 						<div class="member  ">
 							<div class="member__photo-wrapper">
-								<img src="assets/img/common/person/p5.jpg" class="member__photo" alt="Member Photo">
+								<img src="assets/img/common/person/MAN 1.png" class="member__photo" alt="Member Photo">
 								<div class="member__cover">
 									<blockquote class="member__quote">Ek Nafrat hi hai jisey,Duniya chand Lamho mein
 										jaan Leti hai….Warna, Chahat ka yakin..Dilane mein to Zindagi Beet jaati hai…
@@ -1743,7 +1746,7 @@
 				<div class="home-course-slider owl-carousel owl-theme">
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/15+ Categories.png" alt="course" />
 							<div class="course-content">
 								<h2>15+ Categories</h2>
 								<!-- <p>
@@ -1756,7 +1759,7 @@
 
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/5+ Regional Languages.png" alt="course" />
 							<div class="course-content">
 								<h2>5+ Regional Language</h2>
 								<!-- <p>
@@ -1770,7 +1773,7 @@
 
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Free Library.png" alt="course" />
 							<div class="course-content">
 								<h2>Free Library</h2>
 								<!-- <p>
@@ -1784,7 +1787,7 @@
 
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Relates your daily mood.png" alt="course" />
 							<div class="course-content">
 								<h2>Related your daily mood</h2>
 								<!-- <p>
@@ -1797,7 +1800,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Shayari’s in Video, Text or Image .png" alt="course" />
 							<div class="course-content">
 								<h2>Shayari's in video, Text or Images</h2>
 								<!-- <p>
@@ -1810,7 +1813,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Videos of 8s to 60s.png" alt="course" />
 							<div class="course-content">
 								<h2>Videos in 8s to 60s</h2>
 								<!-- <p>
@@ -1823,7 +1826,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Easy to Use.png" alt="course" />
 							<div class="course-content">
 								<h2>Easy To Use</h2>
 								<!-- <p>
@@ -1836,7 +1839,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Follow Top Shayar’s.png" alt="course" />
 							<div class="course-content">
 								<h2>Follow Top Shayari's</h2>
 								<!-- <p>
@@ -1849,7 +1852,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Participate in Battles.png" alt="course" />
 							<div class="course-content">
 								<h2>Participate in Battle</h2>
 								<!-- <p>
@@ -1862,7 +1865,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Easy to Share.png" alt="course" />
 							<div class="course-content">
 								<h2>Easy Earn</h2>
 								<!-- <p>
@@ -1875,7 +1878,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Update Profile.png" alt="course" />
 							<div class="course-content">
 								<h2>Update Profile</h2>
 								<!-- <p>
@@ -1888,7 +1891,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/person/p5.jpg" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Social community of Shayars.png" alt="course" />
 							<div class="course-content">
 								<h2>Social Community of Shayar</h2>
 								<!-- <p>
@@ -2100,7 +2103,7 @@
 		</section>
 		My code for download app Ends-->
 		<!-- Section -->
-		<section class="section  section--no-pb " id='contacts'>
+		<section class="section  section--no-pb" id='contacts' style="padding-top: 50px">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-24">
